--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -100,27 +100,23 @@ astute HEADING TOP AREA CSS
 .countdown-col-element strong {
   font-size: 50px;
 }
-
-.count_down_area {
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	padding: 83px 0 98px;
-	position: relative;
-}
-
-.count_down_area::before {
-	position: absolute;
-	content: "";
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 0;
-	background: rgba(2, 2, 2, 0.6);
-}
  .row.sg {
 	 margin-top: 38px;
  }
+.count_down_area {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
+#counter-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  clear: float;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
 .single_counter1{
     background: rgba(240, 30, 74, 0.85);
     position: relative;
