--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -439,7 +439,9 @@ position: absolute;
 .single_portfolio:hover .single_portfolio_thumb img{
     transform:scale(1.2);
 }
-.single_portfolio_icon{}
+.single_portfolio_icon{
+  cursor: pointer;
+}
 .single_portfolio_icon i {
     font-size: 21px;
     height: 52px;
